syntax = "proto3";

package vou.proto;

import "google/protobuf/timestamp.proto";

option go_package = "VOU-Server/proto/gen";

message RenewAccessTokenRequest {
  string refresh_token = 1;
}

message RenewAccessTokenResponse {
  string    access_token = 1;
	google.protobuf.Timestamp access_token_expires_at = 2;
}