syntax = "proto3";

package vou.proto;

import "google/api/annotations.proto";
import "auth/rpc_create_user.proto";
import "auth/rpc_login_user.proto";
import "auth/rpc_authorize_user.proto";
import "auth/rpc_renew_access_token.proto";


import "counterpart/rpc_create_store.proto";

option go_package = "VOU-Server/proto/gen";

service Gateway {
  // BEGIN AUTH
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
      post: "/api/v1/create_user"
      body: "*"
    };
  }
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse) {
    option (google.api.http) = {
      post: "/api/v1/login_user"
      body: "*"
    };
  }
  rpc AuthorizeUser(AuthorizeRequest) returns (AuthorizeResponse) {
    option (google.api.http) = {
      get: "/api/v1/authorize"
    };
  }
  rpc RenewAccessToken(RenewAccessTokenRequest) returns (RenewAccessTokenResponse) {
    option (google.api.http) = {
      post: "/api/v1/tokens/renew_access"
      body: "*"
    };
  }
  // END AUTH

  // BEGIN COUNTERPART
  rpc CreateStore(CreateStoreRequest) returns (CreateStoreResponse) {
    option (google.api.http) = {
      post: "/api/v1/create_store"
      body: "*"
    };
  }
  // END COUNTERPART
}
